minor adjustments for better code quality